[package]
name = "enigmatick-wasm"
version = "0.1.0"
authors = ["Justin Thomas <justin@jdt.io>"]
description = "Enigmatick WASM Component"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
chrono = { version = "0.4", features = ["serde"] }
gloo-net = { version = "0.2", features = ["json", "eventsource"] }
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
rsa = "0.7"
rand = "0.8"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.20"
uuid = { version = "1.2", features = ["v4"] }
orion = "0.17"
serde_json = "1.0"
lazy_static = "1.4.0"
url = "2.3"
httpdate = "1"
regex = "1"
olm-rs = "2.2"
js-sys = "0.3"
strum = "0.24"
strum_macros = "0.24"

futures = "0.3"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Window',
  'Navigator',
  'Performance',
  'EventSource',
  'ReadableStream',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false