[package]
name = "enigmatick_wasm"
version = "0.1.0"
authors = ["Justin Thomas <justin@jdt.io>"]
description = "Enigmatick WASM Component"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://gitlab.com/enigmatick/enigmatick_wasm"
documentation = "https://docs.rs/enigmatick/latest/enigmatick_wasm/"
homepage = "https://enigmatick.social/@jdt"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ek"

[dependencies]
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
rsa = "0.9.7"
rand = "0.8"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
uuid = { version = "1.2", features = ["v4", "rng-getrandom"] }
orion = "0.17"
serde_json = "1.0"
lazy_static = "1.4.0"
url = "2.4"
httpdate = "1"
regex = "1"
js-sys = "0.3"
strum = "0.24"
strum_macros = "0.24"
urlencoding = "2.1"
anyhow = "1.0"
futures = "0.3"
console_error_panic_hook = "0.1.7"
openmls = { version = "0.6.0", features = ["js", "openmls_rust_crypto"] }
openmls_rust_crypto = "0.3.0"
openmls_basic_credential = { version = "0.3.0", features = ["clonable"] }
serde_with = "3.12.0"
jdt_activity_pub = "0.2.71"
#jdt_activity_pub = { path = "../../../../libs/activity_pub" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.2", features = ["json", "eventsource"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt"] }
reedline-repl-rs = { version = "1.2.1", features = ["async"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Window',
  'Navigator',
  'Performance',
  'EventSource',
  'ReadableStream',
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
